--- a/cog.yaml
+++ b/cog.yaml
@@ -25,4 +25,5 @@ build:
 
 # predict.py defines how predictions are run on your model
 predict: "predict.py:Predictor"
+image: "r8.im/aaronbesson/m3maker"
 train: "train.py:train"
